force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>This is a custom Quote object, used to send Quotes to the Customers.</description>
    <label>Quote</label>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>