force-app/main/default/objects/Quote__c/fields/ACV_FORM__c.field-meta.xml
<CustomField>
    <fullName>ACV_FORM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACV Form</label>
    <referenceTo>ACV_Form__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>