force-app/main/default/objects/Quote__c/fields/Additional_Sales_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sales_Tax_Percent__c</fullName>
    <label>Additional Sales Tax Percent</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>