force-app/main/default/objects/Quote__c/fields/Additional_Sales_Tax_Percent_Formula__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sales_Tax_Percent_Formula__c</fullName>
    <formula>Additional_City_Tax_Percent__c +  Additional_County_Tax_Percent__c +  Additional_State_Tax_Percent__c +  Additional_Sales_Tax_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Sales Tax Percent Formula</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>