force-app/main/default/objects/Quote__c/fields/Additional_To__c.field-meta.xml
<CustomField>
    <fullName>Additional_To__c</fullName>
    <description>Additional To Address</description>
    <label>Additional To</label>
    <type>TextArea</type>
</CustomField>