force-app/main/default/objects/Quote__c/fields/Additional_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_To_Name__c</fullName>
    <label>Additional To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>