force-app/main/default/objects/Quote__c/fields/Boat_Costline__c.field-meta.xml
<CustomField>
    <fullName>Boat_Costline__c</fullName>
    <formula>IF(
	ISBLANK(Test_2__c), 
	Related_to_Product__r.Default_Costline__c, 
	Test_2__r.Costline__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Costline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>