force-app/main/default/objects/Quote__c/fields/Boat_Sales_Tax2__c.field-meta.xml
<CustomField>
    <fullName>Boat_Sales_Tax2__c</fullName>
    <formula>IF( ISPICKVAL( State__c , &quot;Other&quot;) , Manual_Sales_Tax_Entry__c , Boat_Sales_Tax2_Backend__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>