force-app/main/default/objects/Quote__c/fields/Boat_Sales_Tax2_Backend__c.field-meta.xml
<CustomField>
    <fullName>Boat_Sales_Tax2_Backend__c</fullName>
    <label>Boat Sales Tax Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>