force-app/main/default/objects/Quote__c/fields/Boat_Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Boat_Sold_By__c</fullName>
    <label>Boat Sold By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FAD Admin</fullName>
                <default>true</default>
                <label>FAD Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>