force-app/main/default/objects/Quote__c/fields/Booked_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Booked_Sale_Price__c</fullName>
    <formula>Quote_Sale_Price__c - Quote_Total_Over_Allowance_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>