force-app/main/default/objects/Quote__c/fields/CO_Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>CO_Buyer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CO Buyer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote (CO Buyer Name)</relationshipLabel>
    <relationshipName>Quote1</relationshipName>
    <type>Lookup</type>
</CustomField>