force-app/main/default/objects/Quote__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF(
  Costline_Sell_Price__c &lt; Booked_Sale_Price__c ,

  Booked_Sale_Price__c * IF
  (
    ISNULL($Setup.System_Configure__c.Above_Costline__c),
    2,
    $Setup.System_Configure__c.Above_Costline__c
  )
  /100,

  Booked_Sale_Price__c * IF
  (
    ISNULL($Setup.System_Configure__c.Under_Costline__c),
    1,
    $Setup.System_Configure__c.Under_Costline__c
  )
  /100
)
+ Commission_Stip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>