force-app/main/default/objects/Quote__c/fields/Commission_Stip__c.field-meta.xml
<CustomField>
    <fullName>Commission_Stip__c</fullName>
    <formula>Test_2__r.Commission_Stip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Stip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>