force-app/main/default/objects/Quote__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field on Contact</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>