force-app/main/default/objects/Quote__c/fields/Cost_With_Rigging__c.field-meta.xml
<CustomField>
    <fullName>Cost_With_Rigging__c</fullName>
    <formula>Test_2__r.Cost_With_Rigging__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost With Rigging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>