force-app/main/default/objects/Quote__c/fields/Costline_Divider__c.field-meta.xml
<CustomField>
    <fullName>Costline_Divider__c</fullName>
    <formula>1- Boat_Costline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costline Divider</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>