force-app/main/default/objects/Quote__c/fields/Costline_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Costline_Sell_Price__c</fullName>
    <formula>Quote_Cost_Clone__c / Costline_Divider__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costline Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>