force-app/main/default/objects/Quote__c/fields/currencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>currencyIsoCode__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>currencyIsoCode</label>
    <type>Text</type>
</CustomField>