force-app/main/default/objects/Quote__c/fields/Customer_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Inquiry</label>
    <referenceTo>Customer_Inquiry__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>