force-app/main/default/objects/Quote__c/fields/Dealer_Comments_and_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Comments_and_Notes__c</fullName>
    <label>Dealer Comments and Notes</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>