force-app/main/default/objects/Quote__c/fields/Dealer_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Disclaimer__c</fullName>
    <label>Dealer Disclaimer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Boat Disclaimer</fullName>
            </value>
            <value>
                <fullName>Used Boat Disclaimer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>