force-app/main/default/objects/Quote__c/fields/Dealer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Discount__c</fullName>
    <label>Dealer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>