force-app/main/default/objects/Quote__c/fields/Dealer_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Price_Total__c</fullName>
    <inlineHelpText>Calculates the sum of Dealer Price of all the Quote Line Items</inlineHelpText>
    <label>Dealer Price Total</label>
    <summarizedField>Quote_Line_Item__c.Dealer_Price__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>