force-app/main/default/objects/Quote__c/fields/Dealer_Profit_w_Dealer_Cost__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Profit_w_Dealer_Cost__c</fullName>
    <formula>Booked_Sale_Price__c -  Quote_Cost_Clone__c -  Rigging_Cost__c -  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Profit w Dealer Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>