force-app/main/default/objects/Quote__c/fields/Dealer_Quote__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>