force-app/main/default/objects/Quote__c/fields/Discount_On_Quote__c.field-meta.xml
<CustomField>
    <fullName>Discount_On_Quote__c</fullName>
    <inlineHelpText>Comes from Product.Contains the value of Discount on the Boat/Product.</inlineHelpText>
    <label>Discount On Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>