force-app/main/default/objects/Quote__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Specifies the email to which the Quote will be sent.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>