force-app/main/default/objects/Quote__c/fields/Engine_2__c.field-meta.xml
<CustomField>
    <fullName>Engine_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engine 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Engine</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Quote (Engine 2)</relationshipLabel>
    <relationshipName>Engine2</relationshipName>
    <type>Lookup</type>
</CustomField>