force-app/main/default/objects/Quote__c/fields/Engine_3_SN__c.field-meta.xml
<CustomField>
    <fullName>Engine_3_SN__c</fullName>
    <label>Engine 3 SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>