force-app/main/default/objects/Quote__c/fields/Engine_Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>Engine_Dealer_Price__c</fullName>
    <formula>Engine__r.Total_Dealer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine Dealer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>