force-app/main/default/objects/Quote__c/fields/Instant_Quote__c.field-meta.xml
<CustomField>
    <fullName>Instant_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instant Quote</label>
    <type>Checkbox</type>
</CustomField>