force-app/main/default/objects/Quote__c/fields/Lock_Record__c.field-meta.xml
<CustomField>
    <fullName>Lock_Record__c</fullName>
    <label>Lock Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>