force-app/main/default/objects/Quote__c/fields/Manual_Sales_Tax_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Sales_Tax_Entry__c</fullName>
    <label>Manual Sales Tax Entry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>