force-app/main/default/objects/Quote__c/fields/Manufacturer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Invoice__c</fullName>
    <formula>Test_2__r.Manufacture_Invoice2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>