force-app/main/default/objects/Quote__c/fields/Mapped_Boat_Length__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Boat_Length__c</fullName>
    <inlineHelpText>Contains the mapping of Boat Length of the product involved in Quote.</inlineHelpText>
    <label>Boat Length</label>
    <length>20</length>
    <type>Text</type>
</CustomField>