force-app/main/default/objects/Quote__c/fields/Mapped_Engine_SN__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Engine_SN__c</fullName>
    <inlineHelpText>Contains the mapping of Engine SN of the product involved in Quote.</inlineHelpText>
    <label>Engine SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>