force-app/main/default/objects/Quote__c/fields/Mapped_HIN__c.field-meta.xml
<CustomField>
    <fullName>Mapped_HIN__c</fullName>
    <inlineHelpText>Contains the mapping of HIN Number of the product involved in Quote.</inlineHelpText>
    <label>HIN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>