force-app/main/default/objects/Quote__c/fields/Mapped_Trailer_VIN__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Trailer_VIN__c</fullName>
    <inlineHelpText>Contains the mapping of Trailer VIN Number of the product involved in Quote.</inlineHelpText>
    <label>Trailer VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>