force-app/main/default/objects/Quote__c/fields/MSRP_Boat_Price_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>MSRP_Boat_Price_Negotiation__c</fullName>
    <label>MSRP Boat Price Negotiation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>