force-app/main/default/objects/Quote__c/fields/Negotiation_MSRP_Boat_Price__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_MSRP_Boat_Price__c</fullName>
    <description>Specifies the negotiated MSRP Boat Price</description>
    <label>MSRP Boat Price Negotiated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>