force-app/main/default/objects/Quote__c/fields/Negotiation_Trade_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Trade_Payoff__c</fullName>
    <description>Negotiated value of Trade Payoff</description>
    <label>Negotiated Trade Payoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>