force-app/main/default/objects/Quote__c/fields/Negotiation_Trailer_ACV__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Trailer_ACV__c</fullName>
    <description>Contains the Negotiated value of Trailer ACV</description>
    <label>Negotiated Trailer ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>