force-app/main/default/objects/Quote__c/fields/NetSalesTax__c.field-meta.xml
<CustomField>
    <fullName>NetSalesTax__c</fullName>
    <formula>Quote_Net_Selling_Price_Calculated__c * Boat_Sales_Tax2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSalesTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>