force-app/main/default/objects/Quote__c/fields/New_Ordered_Boat__c.field-meta.xml
<CustomField>
    <fullName>New_Ordered_Boat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create inventory boat with ordered status from quote</description>
    <label>New Ordered Boat</label>
    <type>Checkbox</type>
</CustomField>