force-app/main/default/objects/Quote__c/fields/No_Trailer__c.field-meta.xml
<CustomField>
    <fullName>No_Trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Trailer</label>
    <type>Checkbox</type>
</CustomField>