force-app/main/default/objects/Quote__c/fields/Non_Taxable_Total__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable_Total__c</fullName>
    <label>Non Taxable Total</label>
    <summarizedField>Quote_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Quote_Line_Item__c.Non_Taxable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>