force-app/main/default/objects/Quote__c/fields/Our_Instant_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Our_Instant_Quote_Price__c</fullName>
    <label>Our Instant Quote Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>