force-app/main/default/objects/Quote__c/fields/Port_Engine_SN__c.field-meta.xml
<CustomField>
    <fullName>Port_Engine_SN__c</fullName>
    <label>Port Engine SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>