force-app/main/default/objects/Quote__c/fields/Quote_Boat_Sales_Tax_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Boat_Sales_Tax_Calculated__c</fullName>
    <formula>Quote_Net_Selling_Price_Calculated__c *  Boat_Sales_Tax2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Boat Sales Tax(Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>