force-app/main/default/objects/Quote__c/fields/Quote_Boat_Sales_Tax_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Quote_Boat_Sales_Tax_Negotiation__c</fullName>
    <label>Quote Boat Sales Tax Negotiation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>