force-app/main/default/objects/Quote__c/fields/Quote_Boat_Trade_Over_Allowance_Calculat__c.field-meta.xml
<CustomField>
    <fullName>Quote_Boat_Trade_Over_Allowance_Calculat__c</fullName>
    <formula>Quote_Trade_Allowance__c - Quote_Trade_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Boat Trade Over Allowance(Calculat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>