force-app/main/default/objects/Quote__c/fields/Quote_Cost__c.field-meta.xml
<CustomField>
    <fullName>Quote_Cost__c</fullName>
    <description>This is the Field mapped with &quot;Total Dealer Price&quot; On Inventory. This need to be the Baseprice+option category price for a boat</description>
    <label>Quote Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>