force-app/main/default/objects/Quote__c/fields/Quote_Cost_Clone__c.field-meta.xml
<CustomField>
    <fullName>Quote_Cost_Clone__c</fullName>
    <formula>Quote_Total_MSRP__c + Dealer_Price_Total__c +  Trailer_Dealer_Price__c +  Engine_Dealer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Quote Cost Price From Product + Dealer Options Total</inlineHelpText>
    <label>Quote Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>