force-app/main/default/objects/Quote__c/fields/Quote_Deal_Margin__c.field-meta.xml
<CustomField>
    <fullName>Quote_Deal_Margin__c</fullName>
    <label>Quote Deal Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>