force-app/main/default/objects/Quote__c/fields/Quote_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Down_Payment__c</fullName>
    <label>Quote Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>