force-app/main/default/objects/Quote__c/fields/Quote_MSRP_Boat_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_MSRP_Boat_Price__c</fullName>
    <inlineHelpText>Initially comes from Product.Contains the value of Boat MSRP Price.Value changes on Negotiating the Prices.</inlineHelpText>
    <label>MSRP Boat Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>