force-app/main/default/objects/Quote__c/fields/Quote_MSRP_Trailer_Price_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Quote_MSRP_Trailer_Price_Negotiation__c</fullName>
    <label>Quote MSRP Trailer Price Negotiation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>