force-app/main/default/objects/Quote__c/fields/Quote_Net_Selling_Price_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Net_Selling_Price_Calculated__c</fullName>
    <formula>IF((Quote_Trade_Allowance__c+Quote_Trailer_Allowance__c)&lt; Quote_Your_Price_Formula__c,Quote_Your_Price_Formula__c - (Quote_Trade_Allowance__c+Quote_Trailer_Allowance__c)  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Net Selling Price(Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>