force-app/main/default/objects/Quote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <displayFormat>Quote-{0000}</displayFormat>
    <label>Quote Number</label>
    <type>AutoNumber</type>
</CustomField>