force-app/main/default/objects/Quote__c/fields/Quote_Payment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Payment__c</fullName>
    <inlineHelpText>Initially comes from Product,contains the value of Payment on Product.Later,could contain the value of any Payment calculations made while Negotiation of prices.</inlineHelpText>
    <label>Quote Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>