force-app/main/default/objects/Quote__c/fields/Quote_Payment_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Quote_Payment_Negotiation__c</fullName>
    <label>Quote Payment Negotiation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>