force-app/main/default/objects/Quote__c/fields/Quote_Rate__c.field-meta.xml
<CustomField>
    <fullName>Quote_Rate__c</fullName>
    <label>Quote Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>