force-app/main/default/objects/Quote__c/fields/Quote_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sale_Price__c</fullName>
    <label>Quote Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>