force-app/main/default/objects/Quote__c/fields/Quote_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Quote_To_Address__c</fullName>
    <label>Quote To Address</label>
    <type>TextArea</type>
</CustomField>