force-app/main/default/objects/Quote__c/fields/Quote_Total_Amount_Financed_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Amount_Financed_Calculated__c</fullName>
    <formula>Quote_Total_Price_Calculated__c- Quote_Down_Payment__c</formula>
    <label>Quote Total Amount Financed(Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>