force-app/main/default/objects/Quote__c/fields/Quote_Total_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_MSRP__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Quote Cost Price from Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>