force-app/main/default/objects/Quote__c/fields/Quote_Total_Over_Allowance_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Over_Allowance_Calculated__c</fullName>
    <formula>Quote_Boat_Trade_Over_Allowance_Calculat__c +  Quote_Trailer_Allowance_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total Over Allowance(Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>