force-app/main/default/objects/Quote__c/fields/Quote_Total_Price_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_Price_Calculated__c</fullName>
    <formula>Quote_Net_Selling_Price_Calculated__c+ Boat_Sales_Tax2__c+ Quote_Trailer_Sales_Tax__c + Quote_Boat_Reg_Fee__c+  Quote_Trailer_Reg_Fee__c +Quote_Doc_Fee__c +Quote_Trade_Payoff__c+ Tyre_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total Price(Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>