force-app/main/default/objects/Quote__c/fields/Quote_Trade_ACV__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trade_ACV__c</fullName>
    <formula>ACV_FORM__r.Approved_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Trade ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>