force-app/main/default/objects/Quote__c/fields/Quote_Trade_ACV_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trade_ACV_Negotiation__c</fullName>
    <label>Quote Trade ACV Negotiation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>