force-app/main/default/objects/Quote__c/fields/Quote_Trade_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trade_Allowance__c</fullName>
    <label>Quote Trade Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>